# ChangeLog for dev-python/nosetty
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> nosetty-0.4-r1.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> nosetty-0.4-r1.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> nosetty-0.4-r1.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  14 May 2011; James Rowe <jnrowe@gmail.com> -nosetty-0.4.ebuild,
  nosetty-0.4-r1.ebuild:
  Keyworded x86.

  14 May 2011; James Rowe <jnrowe@gmail.com> nosetty-0.4-r1.ebuild:
  Keyworded amd64.

*nosetty-0.4-r1 (14 Apr 2011)

  14 Apr 2011; James Rowe <jnrowe@gmail.com> +nosetty-0.4-r1.ebuild:
  Support multi-ABI python [336].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Added PYTHON_DEPEND setting.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Keyworded x86.

  17 Oct 2009; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Fix data file permissions [e5e].

  14 Oct 2009; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Switch to using jnrowe-pypi eclass.

  13 Oct 2009; James Rowe <jnrowe@gmail.com> nosetty-0.4.ebuild:
  Keyworded ~x86 [dbd].

*nosetty-0.4 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +nosetty-0.4.ebuild,
  +metadata.xml:
  Initial ebuild. by me [4af].
